--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Download Links</h1>
     <ul id="downloadLinks"></ul>
-
+    <button id="clearAll">Clear All</button>
     <script src="popup.js"></script>
 </body>
 </html>
